kubernetes/apps/base/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: revenz/paperless-ngx
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: paperless-ngx-media
            - mountPath: /temp
              name: paperless-ngx-temp
            - mountPath: /app/Data
              name: paperless-ngx-data
            - mountPath: /app/Logs
              name: paperless-ngx-logs
            - mountPath: /app/common
              name: paperless-ngx-common
      restartPolicy: Always
      volumes:
        - name: paperless-ngx-media
          persistentVolumeClaim:
            claimName: media
        - name: paperless-ngx-common
          persistentVolumeClaim:
            claimName: paperless-ngx-common
        - name: paperless-ngx-data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: paperless-ngx-logs
          persistentVolumeClaim:
            claimName: paperless-ngx-logs
        - name: paperless-ngx-temp
          emptyDir:
            sizeLimit: 100Gi
