kubernetes/apps/base/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: media
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
