kubernetes/apps/base/paperless-ngx/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`paperless-ngx.${cluster_domain}`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 19200
